Added code to UPDATE movies
PUT /movie/id added
